Harden multi-tenant security, replace ComingSoon modules, and improve auth/CI
Strengthen tenant isolation and move auth to httpOnly cookies; ship real Events, Announcements, Departments, and Prayer pages; add JaCoCo coverage and Docker healthchecks.

Co-authored-by: Cursor <cursoragent@cursor.com>